# NanoSpring

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  createData.py  entropy_per_base.py  getStats.py  minHash.py  minHashCuda.py  sample.py  testMinHash.py  toBase.py  validateResult.sh
.github/workflows/: cmake.yml
fast-lzma2/: Makefile  fl2_threading.h
fast-lzma2/bench/: Makefile
fast-lzma2/fuzzer/: Makefile
fast-lzma2/test/: Makefile
include/: AlignerTester.h  BBHashMap.h  BooPHF.h  Compressor.h  Consensus.cuh  Consensus.h  ConsensusGraph.h  Contig.cuh  Contig.h  Decompressor.h  DirectoryUtils.h  Edits.h  LocalMyers.h  LocalMyersRollBack.h  LocalMyersRollBackOld.h  MyersAligner.h  NanoporeReads.cuh  NanoporeReads.h  OmpMutex.h  ReadAligner.cuh  ReadAligner.h  ReadData.h  ReadFilter.h  StringAligner.h  StringToBits.h  Types.h  bsc_helper.h  dnaToBits.h  lzma2_helper.h  myers.h  testAligner.cuh  testAligner.h  testConsensus.cuh  testContigGenerator.cuh  testMinHash.cuh
src/: AlignerTester.cpp  BBHashMap.cpp  Compressor.cpp  Consensus.cpp  Consensus.cu  ConsensusGraph.cpp  Contig.cpp  Contig.cu  Decompressor.cpp  DirectoryUtils.cpp  Edits.cpp  LocalMyers.cpp  LocalMyersRollBack.cpp  LocalMyersRollBackOld.cpp  LocalMyersRollBack_impl.h  LocalMyers_impl.h  MyersAligner.cpp  NanoporeReads.cpp  NanoporeReads.cu  OmpMutex.cpp  ReadAligner.cpp  ReadAligner.cu  ReadData.cpp  ReadFilter.cpp  bsc.cpp  dnaToBits.cpp  lzma2.cpp  main.cpp  myers.cpp  testAlignAlgs.cpp  testAligner.cpp  testAligner.cu  testCompressor.cpp  testConsensus.cpp  testConsensus.cu  testContigGenerator.cpp  testContigGenerator.cu  testDecompressor.cpp  testDisconnected.cpp  testLoneReads.cpp  (+5 more)
util/: get_fastq_stats.sh  malloc_trim_test.cpp  test_script.sh
util/old_code/: createData.py  remove_short_reads.cpp  sample.py  validateResult.sh
util/scripts/: run_exp_NanoSpring.sh  run_exp_NanoSpring_12x.sh  run_exp_NanoSpring_banana.sh  run_exp_NanoSpring_basecallers.sh  run_exp_NanoSpring_coverage.sh  run_exp_NanoSpring_edge_thr.sh  run_exp_NanoSpring_hs2_extra.sh  run_exp_NanoSpring_minhash_k.sh  run_exp_NanoSpring_minhash_nt.sh  run_exp_NanoSpring_minimap_default.sh  run_exp_NanoSpring_threads.sh  run_exp_renano.sh
